--- a/views/myProducts.ejs
+++ b/views/myProducts.ejs
@@ -67,16 +67,39 @@
 				</button>
 				<div class="collapse navbar-collapse" id="navbars-host">
 					<ul class="navbar-nav ml-auto">
-						<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-						<li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
-						<li class="nav-item active"><a class="nav-link" href="courses.html">Courses</a></li>
-						<li class="nav-item"><a class="nav-link" href="dashboard.html">Dashboard</a></li>
-						<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                        <li class="nav-item <½= page_name === 'index' && 'active' %> "><a class="nav-link" href="/products">Ürünler</a></li>
+                    
+					
+
+                        <% if(userROLE==="Customer") {  %>
+                               
+                           <li class="nav-item"><a class="nav-link" href="/myBasket">Sepetim</a></li>
+                           <% }%>
+   
+   
+                       <% if(userROLE==="Seller") {  %>
+                       
+                           <li class="nav-item"><a class="nav-link" href="/myProducts">Satıştaki Ürünlerim</a></li>
+                       
+                       <% }%>
 					</ul>
-					<ul class="nav navbar-nav navbar-right">
-                        <li><a class="hover-btn-new log orange mr-2" href="login.html"><span><i class="fa fa-sign-in" aria-hidden="true"></i></span></a></li>
-						<li><a class="hover-btn-new log orange" href="register.html"><span><i class="fa fa-user-plus" aria-hidden="true"></i></span></a></li>
-                    </ul>
+
+
+                    <% if(!userIN) {  %>
+
+                        <ul class="nav navbar-nav navbar-right">
+                            <li><a class="hover-btn-new log orange mr-2" href="/login"><span><i class="fa fa-sign-in" aria-hidden="true"></i></span></a></li>
+                            <li><a class="hover-btn-new log orange" href="/register"><span><i class="fa fa-user-plus" aria-hidden="true"></i></span></a></li>
+                        </ul> 
+                        <%  }  %>
+                       
+    
+                    
+                          <% if(userIN) {  %>
+                            <ul class="nav navbar-nav navbar-right">
+                                    <li><a class="hover-btn-new log mr-2" href="/users/logout"><span><i class="fa fa-sign-out" aria-hidden="true"></i></span></a></li>
+                            </ul>
+                            <% } %>
 				</div>
 			</div>
 		</nav>
