categories added and product model modif.

--- a/views/product.ejs
+++ b/views/product.ejs
@@ -132,11 +132,17 @@
 							<div class="blog-desc">
 								
 								<blockquote class="default">
-									<%= product.description %>
+								Ürün Özellikleri: <%= product.description %>
 								</blockquote>
-								
-								
-							</div>							
+                                <blockquote class="default">
+								Ürün Fiyatı:	<%= product.price %>
+								</blockquote>
+                                <blockquote class="default">
+								Stok:	<%= product.stok %>
+								</blockquote>
+							</div>
+                            
+                          
 						</div>
 					</div>
 					
