--- a/views/myProducts.ejs
+++ b/views/myProducts.ejs
@@ -114,7 +114,7 @@
 				 <!-- Modal Button -->
 				 <div class="col-lg-12 text-center ">
 					<button class="btn btn-lg btn-warning rounded-0 text-white" href="#"
-						data-toggle="modal" data-target="#addCourse"><span>Yeni Ürün Oluştur
+						data-toggle="modal" data-target="#addProduct"><span>Yeni Ürün Oluştur
 						</span></button>
 				</div>
           
@@ -137,12 +137,7 @@
 							</div>
                             <div class="clearfix">
                                 <ul style="list-style-type: none;">
-                                  <li style="float: left;">
-                                    <button class="btn btn-primary rounded-0 text-white" data-toggle="modal" data-target="#updateProduct<%= products[i]._id %>"><span>DÜZENLE</span></button>
-                                
-                                    <div class="modal fade" id="updateProduct<%= products[i]._id %>" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-                                
-                                </li>
+                            
     
    
    
@@ -155,7 +150,10 @@
                               </div>
 						</div>
 					</div>
-                </div><!-- end col -->	
+                </div><!-- end col -->
+               
+                
+
 				<% } %>
 
 
@@ -228,8 +226,16 @@
             </div>
         </div><!-- end container -->
     </div><!-- end copyrights -->
+
+
+
+    
+
+
+
+
 	!-- ADD Modal -->
-<div class="modal fade" id="addCourse" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<div class="modal fade" id="addProduct" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 	<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
 		<div class="modal-content">
 			<div class="modal-body customer-box">
