--- a/views/myBasket.ejs
+++ b/views/myBasket.ejs
@@ -107,6 +107,7 @@
         </div>
       </nav>
     </header>
+                                                                                
   <div id="overviews" class="section wb">
     <div class="container">
         <div class="row"> 
@@ -128,6 +129,10 @@
                           <div class="blog-desc">
                             <p></p>
                           </div>
+                          <form method="POST" action="/products/release">
+                            <input type="hidden" name="product_id" value="<%= user.basket[i]._id %>">
+                            <button class="btn btn-lg btn-danger text-white"><span>Sil</span></button>
+                          </form>
                         </div>
                       </div>
                             </div><!-- end col -->	
