--- a/views/myBasket.ejs
+++ b/views/myBasket.ejs
@@ -110,7 +110,14 @@
                                                                                 
   <div id="overviews" class="section wb">
     <div class="container">
-        <div class="row"> 
+        <div class="row">
+          <div class="col-lg-12 text-center "> 
+            <form method="post" action="/products/order">
+            <button class="btn btn-lg btn-warning rounded-0 text-white" href="#"
+              data-toggle="modal" data-target="#addProduct"><span>Siparişi Tamamla
+              </span></button>
+            </form>
+          </div> 
             <div class="col-lg-9 blog-post-single">
                 <div class="row"> 
                   <div class="row mt-5"> 
@@ -232,6 +239,11 @@
             </div>
         </div><!-- end container -->
     </div><!-- end copyrights -->
+
+
+
+
+    
 
     <a href="#" id="scroll-to-top" class="dmtop global-radius"><i class="fa fa-angle-up"></i></a>
 
