--- a/views/register.ejs
+++ b/views/register.ejs
@@ -118,7 +118,7 @@
                         <form class="" name="contactform" method="post" action="users/signup">
                             <div class="row row-fluid">
 							    <div class="offset-1 col-lg-10 col-md-10 col-sm-10">
-                                    <input type="text" name="name" id="name" class="form-control" placeholder="Name">
+                                    <input type="text" name="name" id="name" class="form-control" placeholder="İsim Soyisim">
                                 </div>
                                 <div class="offset-1 col-lg-10 col-md-10 col-sm-10">
                                     <select class="form-control" name="role">
@@ -127,10 +127,13 @@
                                     </select>
                                   </div>
                                 <div class="offset-1 col-lg-10 col-md-10 col-sm-10">
-                                    <input type="email" name="email" id="email" class="form-control" placeholder="Email">
+                                    <input type="email" name="email" id="email" class="form-control" placeholder="E-mail adresi">
                                 </div>
                                 <div class="offset-1 col-lg-10 col-md-10 col-sm-10">
-                                    <input type="password" name="password" id="password" class="form-control" placeholder="Password">
+                                    <input type="password" name="password" id="password" class="form-control" placeholder="Şifre">
+                                </div>
+                                <div class="offset-1 col-lg-10 col-md-10 col-sm-10">
+                                    <input type="text" name="address" id="address" class="form-control" placeholder="Adres">
                                 </div>
                                 <div class="offset-1 col-lg-10 col-md-10 col-sm-10">
                                     <button type="submit" value="LOGIN" id="submit" class="btn btn-light btn-radius btn-brd grd1 btn-block">REGISTER</button>
