order delete and confirmed func. and buttons added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -79,6 +79,14 @@
 						<li class="nav-item"><a class="nav-link" href="/myProducts">Satıştaki Ürünlerim</a></li>
 					
 					<% }%>
+                     
+					<% if(userROLE==="Seller") {  %>
+					
+						<li class="nav-item"><a class="nav-link" href="/myOrders">Siparişlerim </a></li>
+					
+					<% }%>
+
+
 					</ul>
 
                 
